--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,16 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+lab2/venv3/lib64
+lab2/venv3/pyvenv.cfg
+lab2/venv3/bin/activate
+lab2/venv3/bin/activate.csh
+lab2/venv3/bin/activate.fish
+lab2/venv3/bin/Activate.ps1
+lab2/venv3/bin/pip
+lab2/venv3/bin/pip3
+lab2/venv3/bin/pip3.8
+lab2/venv3/bin/pypy
+lab2/venv3/bin/pypy3
+lab2/venv3/bin/python
+lab2/venv3/bin/python3
